トップページ８０％程度完成

--- a/components/LandingArticleListItem/index.module.css
+++ b/components/LandingArticleListItem/index.module.css
@@ -10,6 +10,19 @@
   transform-origin: center;
   transition: all 0.4s ease-in-out;
   overflow: hidden;
+  height: 500px;
+  /* box-shadow: 0 2.5rem 2rem -2rem hsl(200 50% 20% / 40%); */
+}
+
+.article_footer {
+  position: absolute;
+  bottom: 0px;
+  background: #fff;
+  width: 100%;
+  text-align: right;
+  /* padding: 0 24px 5px 24px; */
+  padding-bottom: 5px;
+  padding-right: 24px;
 }
 
 .article a::after {
@@ -23,8 +36,7 @@
 /* basic article elements styling */
 .article h2 {
   margin: 0 0 18px 0;
-  font-family: "Bebas Neue", cursive;
-  font-size: 1.9rem;
+  /* font-size: 1.5rem; */
   letter-spacing: 0.06em;
   color: var(--title-color);
   transition: color 0.3s ease-out;
@@ -78,18 +90,57 @@
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
+.image {
+  /* object-fit: contain; */
+  position: relative !important;
+  width: "100%" !important;
+}
+
+.article p {
+  /* max-height: 100px; */
+  overflow: hidden;
+}
+
+.in_readmore {
+  display: none;
+}
+
 @media screen and (max-width: 900px) {
   /* .article {
     container: card/inline-size;
   } */
+  .article {
+    height: auto;
+  }
+
+  .article_body {
+    height: 200px;
+  }
   .article_body p {
     display: none;
   }
+
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 639px) {
   .article {
     container: card/inline-size;
+    height: auto;
+  }
+
+  .article_body {
+    padding: 0;
+    height:155px;
+  }
+
+  .h2 {
+    height: 130px;
+    overflow: hidden;
+    margin: 0 !important;
+  }
+
+  .in_readmore {
+    display: block;
   }
 }
 
@@ -112,6 +163,10 @@
     aspect-ratio: 1;
     object-fit: cover;
   }
+
+  .out_readmore {
+    display: none;
+  };  
 }
 
 .sr_only:not(:focus):not(:active) {
