--- a/app/globals.css
+++ b/app/globals.css
@@ -27,8 +27,9 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', YuGothic, 'ヒラギノ角ゴ ProN W3',
-    Hiragino Kaku Gothic ProN, Arial, 'メイリオ', Meiryo, sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', YuGothic, 'ヒラギノ角ゴ ProN W3',
+    Hiragino Kaku Gothic ProN, Arial, 'メイリオ', Meiryo, sans-serif; */
+  font-family: YakuHanJPs, Roboto, "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", Arial, nc3Jp, sans-serif !important;
   color: var(--color-text-main);
   line-height: 1.8;
 }
