--- a/components/Article/index.module.css
+++ b/components/Article/index.module.css
@@ -110,7 +110,7 @@
   background-color: var(--color-bg-sub);
   content: attr(data-filename);
   margin: 1em 0 0;
-  font-family: menlo, inconsolata, monospace;
+  /* font-family: menlo, inconsolata, monospace; */
   font-size: 0.8rem;
   padding: 4px 16px;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
