--- a/components/Slider/index.module.css
+++ b/components/Slider/index.module.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -110,7 +110,7 @@
   background-color: var(--color-bg-sub);
   content: attr(data-filename);
   margin: 1em 0 0;
-  font-family: menlo, inconsolata, monospace;
+  /* font-family: menlo, inconsolata, monospace; */
   font-size: 0.8rem;
   padding: 4px 16px;
   border-radius: var(--border-radius) var(--border-radius) 0 0;
@@ -190,9 +190,9 @@
 .swiper {
   overflow: visible;
   width:'80%';
-}
-/* 
-@media (max-width: 640px) {
+} */
+
+/* @media (max-width: 640px) {
   .title {
     font-size: 2rem;
     margin-bottom: 20px;
