--- a/components/Slider/index.module.css
+++ b/components/Slider/index.module.css
@@ -1,4 +1,4 @@
-/* .main {
+.main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -190,7 +190,25 @@
 .swiper {
   overflow: visible;
   width:'80%';
-} */
+}
+
+.absolute {
+  position: absolute;
+  bottom: 0;
+  padding: 10px;
+}
+
+.title {
+  font-size: 1.2rem;
+  margin-bottom: 0px !important;
+  color: white;
+}
+
+.title_background {
+  background-color: rgba(0, 0, 0, 0.25);
+  width: 100%;
+  max-height: 50%;
+}
 
 /* @media (max-width: 640px) {
   .title {
